RESOLVED FIXED87439
Corrupted pages rendering when images are zoomed on Google+
https://bugs.webkit.org/show_bug.cgi?id=87439
Summary Corrupted pages rendering when images are zoomed on Google+
Anders Carlsson
Reported 2012-05-24 16:40:52 PDT
Corrupted pages rendering when images are zoomed on Google+
Attachments
Patch (1.90 KB, patch)
2012-05-24 16:44 PDT, Anders Carlsson
bdakin: review+
Anders Carlsson
Comment 1 2012-05-24 16:44:31 PDT
Anders Carlsson
Comment 2 2012-05-24 17:30:36 PDT
Note You need to log in before you can comment on or make changes to this bug.