Corrupted pages rendering when images are zoomed on Google+ https://bugs.webkit.org/show_bug.cgi?id=87439 <rdar://problem/11503078>

Reviewed by Beth Dakin.

The rect that's given to scrollContentsSlowPath is in frame view coordinates, but if we end up
passing them to RenderLayer::setBackingNeedsRepaintInRect we need to account for the frame scale factor.

* page/FrameView.cpp:
(WebCore::FrameView::scrollContentsSlowPath):

Canonical link: https://commits.webkit.org/105204@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118450 268f45cc-cd09-0410-ab3c-d52691b4dbfc